# olivia-key-agentic-os

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml  verify-publish-readiness.yml
docs/pillar0/: README.md
docs/pillar1/: agent-overview.md  build-decisions.md  known-failure-modes.md
docs/pillar2/: agent-overview.md  build-decisions.md  known-failure-modes.md
docs/pillar3/: agent-overview.md  build-decisions.md  known-failure-modes.md
docs/pillar4/: agent-overview.md  build-decisions.md  known-failure-modes.md
docs/pillar5/: agent-overview.md  build-decisions.md  known-failure-modes.md
docs/pillar6/: agent-overview.md  build-decisions.md  known-failure-modes.md
docs/pillar7/: agent-overview.md  build-decisions.md  known-failure-modes.md
src/common/: __init__.py  andon.py  defect_codes.py  fmea.py  trace.py
src/pillar0/: discovery_tracker.py  discovery_tracker_generator.py  distribution.py  distribution_generator.py  drift_detector.py  drift_detector_generator.py  icp_positioning.py  icp_positioning_generator.py  icp_rubric.py  icp_rubric_generator.py  offer_menu.py  offer_menu_generator.py  p0_interface.py  positioning.py  positioning_generator.py  strategic_memory.py  strategic_memory_generator.py
src/pillar1/: __init__.py  agent_runner.py  constants.py  copq.py  ctq.py  ppd.py  sipoc.py  trace.py
src/pillar2/: content_gate.py  hypothesis_gen.py  lessons_log.py  market_monitor.py  strategy_optimizer.py  trace.py
src/pillar3/: adapters.py  discovery_analyser.py  (+7 more)
(+87 files in other folders)
