[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olivia-key-agentic-os"
version = "1.0.0"
description = "Pillars 0-7 of a Lean Six Sigma / PRINCE2 / CoPQ agentic operating system for solo B2B consulting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Olivia Key", email = "oliviakey@oliviasmuse.com"},
]
keywords = [
    "lean-six-sigma",
    "prince2",
    "copq",
    "agentic",
    "b2b-consulting",
    "operational-risk",
    "sipoc",
    "ctq",
    "ppd",
    "fmea",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["evals/level1"]
